--- a/src/ModInstaller.Adaptor.Dynamic/ModInstaller.Adaptor.Dynamic.csproj
+++ b/src/ModInstaller.Adaptor.Dynamic/ModInstaller.Adaptor.Dynamic.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
     <LangVersion>preview</LangVersion>
     <RootNamespace>ModInstaller</RootNamespace>
 
@@ -20,7 +19,13 @@
     </ItemGroup>
 
     <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
+        <!-- NOTE(erri120): Required by CSharpScript project -->
+        <TargetFramework>net9.0-windows</TargetFramework>
         <DefineConstants>$(DefineConstants);USE_CSHARP_SCRIPT</DefineConstants>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(OS)' != 'Windows_NT' ">
+        <TargetFramework>net9.0</TargetFramework>
     </PropertyGroup>
 
 </Project>
