--- a/src/ModInstaller.IPC/ModInstaller.IPC.csproj
+++ b/src/ModInstaller.IPC/ModInstaller.IPC.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
     <LangVersion>preview</LangVersion>
     <OutputType>Exe</OutputType>
     <ApplicationRevision>0</ApplicationRevision>
@@ -9,6 +8,15 @@
     <RootNamespace>ModInstallerIPC</RootNamespace>
     <AssemblyName>ModInstallerIPC</AssemblyName>
   </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
+        <!-- NOTE(erri120): Required by CSharpScript project -->
+        <TargetFramework>net9.0-windows</TargetFramework>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(OS)' != 'Windows_NT' ">
+        <TargetFramework>net9.0</TargetFramework>
+    </PropertyGroup>
 
   <PropertyGroup>
     <SelfContained>true</SelfContained>
