--- a/src/AntlrUtil/AntlrUtil.csproj
+++ b/src/AntlrUtil/AntlrUtil.csproj
@@ -12,6 +12,14 @@
     <Copyright>Copyright © Black Tree Gaming 2017</Copyright>
   </PropertyGroup>
 
+
+    <ItemGroup>
+        <PackageReference Include="Antlr3.CodeGenerator" Version="3.5.2-rc1">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+    </ItemGroup>
+
   <ItemGroup>
     <Reference Include="Antlr3.Runtime, Version=3.4.1.9004, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
