--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,15 +28,30 @@ jobs:
 
       - run: dotnet --info
 
+      - name: Read Node.js version from package.json
+        id: node-version
+        shell: pwsh
+        run: |
+          $packageJson = Get-Content src/ModInstaller.IPC.TypeScript/package.json | ConvertFrom-Json
+          $nodeVersion = $packageJson.engines.node
+          echo "NODE_VERSION=$nodeVersion" >> $env:GITHUB_OUTPUT
+          echo "Using Node.js version: $nodeVersion"
+
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ steps.node-version.outputs.NODE_VERSION }}
+          cache: "yarn"
+
       - name: Build IPC
         working-directory: src/ModInstaller.IPC.TypeScript
         run: |
-          yarn install
+          yarn --frozen-lockfile install
           yarn build
 
       - name: Build Native
         working-directory: src/ModInstaller.Native.TypeScript
         run: |
-          yarn install
+          yarn --frozen-lockfile install
           yarn build
 
