--- a/src/ModInstaller.IPC.TypeScript/package.json
+++ b/src/ModInstaller.IPC.TypeScript/package.json
@@ -42,7 +42,7 @@
   },
   "packageManager": "yarn@1.22.19",
   "engines": {
-    "node": "22.19"
+    "node": ">=22"
   },
   "ava": {
     "failFast": false,
