--- a/src/ModInstaller.Native.TypeScript/package.json
+++ b/src/ModInstaller.Native.TypeScript/package.json
@@ -31,7 +31,7 @@
     "watch:build": "tsc -p tsconfig.json -w"
   },
   "engines": {
-    "node": "22.19"
+    "node": ">=22"
   },
   "binary": {
     "napi_versions": [
