--- a/test/TestData/TestData.csproj
+++ b/test/TestData/TestData.csproj
@@ -16,6 +16,7 @@
     <EmbeddedResource Include="Data\Skyrim\Spell Perk Item Distributor-36869-7-1-3-1713397024.7z" />
     <EmbeddedResource Include="Data\Skyrim\XP32 Maximum Skeleton Special Extended-1988-5-06-1707663131.7z" />
     <EmbeddedResource Include="Data\FomodComplianceTests.zip" />
+    <EmbeddedResource Include="Data\InvisibleStepTest.zip" />
     <EmbeddedResource Include="Data\CSharpTestCase.zip" />
   </ItemGroup>
 
